# rufous_result

./: README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
result/: result.py
rufous_result/: result.py
source/: conf.py  index.rst
tests/: test_result.py
